swagger command
